---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: ????
  Info:
    - Grab the products, byproducts & ingredients
    - Default serpent to sort keys
    - Validate timescale/rate
    - Check if all products are 100% satisfied
    - Micro
    - Grab the power and pollution
    - Fix sortKeys typo
    - Extract the recipe and machine from the table
    - Blacklist rockets, drills & offshore pumps
    - Sum all the entities and modules
    - Do round up the buildings
    - Move quality to the back
    - Rearrange code
    - Check for beacons
    - Ensure the player is on the 1st floor
    - Require all subfloors to be visible
    - Power pollution comment
    - Get the power and pollution as their true number
    - Check if a recipe is available
    - Change how the debug output is shown
    - Handle machines and modules with quality
    - The items/m button can move/hide, detect that
    - Better detect quality from the sprite button
    - Store power and pollution in the factory table
    - Grab the district's space location
    - Fix missing argument for recipe blocked messages
    - Fix crash when there was no pollution
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 03. 07
  Info:
    - Add the magic hut button next to products
    - Detect the selected factory
    - Strip the trashed icon from the factory name
    - Move the factoryplanner code into its own file
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 03. 05
  Info:
    - Setup the factory container prototypes
    - Give the magic huts an item w/recipe
    - Assign rocket stack sizes
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 03. 04
  Info:
    - Initial commit